--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "tachyons": "^4.11.1",
-    "homepage": "https://SuvashBudhathoki.github.io/robofriends"
+    "tachyons": "^4.11.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
